--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,20 @@
     <string name="btn_login">Login to Spotify</string>
     <string name="btn_save_to_library">Save</string>
     <string name="btn_add_to_favourites">Add as Favourite</string>
-    <string name="tv_song_title" />
-    <string name="tv_artist_name" />
-    <string name="tv_album_name" />
+    <string name="tv_song_title">%1$s</string>
+    <string name="tv_artist_name">%1$s</string>
+    <string name="tv_album_name">%1$s</string>
     <string name="btn_discover">Discover</string>
-    <string name="tv_rp_number" />
-    <string name="tv_rp_title" />
-    <string name="tv_rp_artist" />
-    <string name="tv_r_number" />
-    <string name="tv_r_song_title" />
-    <string name="tv_r_artist" />
+    <string name="tv_rp_number">%1$s</string>
+    <string name="tv_rp_title">%1$s</string>
+    <string name="tv_rp_artist">%1$s</string>
+    <string name="tv_r_number">%1$s</string>
+    <string name="tv_r_song_title">%1$s</string>
+    <string name="tv_r_artist">%1$s</string>
     <string name="btn_options">Options</string>
     <string name="btn_view_favourite">Favourite</string>
     <string name="btn_listen_on_spotify">Listen on Spotify</string>
+    <string name="tv_song_title_recommend">%1$s</string>
+    <string name="tv_recommendatons_title">Recommendations Based On</string>
+    <string name="tv_recent_title">Recently Played</string>
 </resources>
