--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,51 @@
 <resources>
+
+    <!-- App Name -->
+    <string name="app_name">Discoverfy</string>
+
+    <!-- SharedPreferences for image visibility -->
     <string name="shared_pref_file" translatable="false">com.application.discoverfy</string>
     <string name="prefer_image_choice" translatable ="false">prefer_image_choice</string>
     <string name="shared_pref_image_default" translatable="false">shared_pref_image_default</string>
     <string name="shared_pref_image_null" translatable="false">shared_pref_image_null</string>
 
+    <!-- Spotify SharedPreferences -->
+    <string name="spotify" translatable="false">Spotify</string>
+
+    <!-- API Response Error Message -->
     <string name="error_message">Failed to download songs</string>
 
-    <string name="app_name">Discoverfy</string>
+    <!-- LoginActivity -->
     <string name="btn_login">Login to Spotify</string>
-    <string name="btn_share_recommendation">Share Recommendation</string>
-    <string name="tv_song_title">%1$s</string>
-    <string name="tv_artist_name">%1$s</string>
-    <string name="tv_album_name">%1$s</string>
-    <string name="btn_discover">Recommend</string>
-    <string name="tv_rp_number">%1$s</string>
+    <string name="btn_settings">Settings</string>
+    <string name="iv_legend">Harry Styles</string>
+
+    <!-- SettingActivity -->
+    <string name="tv_settings">Settings</string>
+    <string name="rb_show_image">Show image</string>
+    <string name="rb_no_image">Don\'t show image</string>
+
+    <!-- RecentlyPlayedActivity -->
+    <string name="tv_welcome">Welcome</string>
+    <string name="tv_username">%1$s</string>
+    <string name="tv_recent_title">Your Recently Played Songs</string>
     <string name="tv_rp_title">%1$s</string>
     <string name="tv_rp_artist">%1$s</string>
-    <string name="tv_r_number">%1$s</string>
+    <string name="btn_discover">Recommend</string>
+
+    <!-- RecommendActivity -->
+    <string name="tv_recommendations_title">Recommendations Based On</string>
+    <string name="tv_song_title_recommend">%1$s</string>
     <string name="tv_r_song_title">%1$s</string>
     <string name="tv_r_artist">%1$s</string>
     <string name="btn_options">Options</string>
+
+    <!-- ActionActivity -->
+    <string name="tv_song_title">%1$s</string>
+    <string name="tv_artist_name">%1$s</string>
     <string name="btn_listen_on_youtube">Listen on Youtube</string>
-    <string name="tv_song_title_recommend">%1$s</string>
-    <string name="tv_recommendations_title">Recommendations Based On</string>
-    <string name="tv_recent_title">Your Recently Played Songs</string>
-    <string name="message">Check out %1$s by %2$s</string>
+    <string name="btn_share_recommendation">Share Recommendation</string>
     <string name="youTube">%1$s %2$s</string>
-    <string name="tv_settings">Settings</string>
-    <string name="tv_search_for_artist">Discover Related Artists</string>
-    <string name="btn_search">Search</string>
-    <string name="btn_settings2">Settings</string>
-    <string name="tv_results_title">Related Artists To</string>
-    <string name="tv_user_input">%1$s</string>
-    <string name="tv_TEST">%1$s</string>
-    <string name="textView2">%1$s</string>
-    <string name="textView3">%1$s</string>
-    <string name="iv_legend">Harry Styles</string>
-    <string name="btn_settings">Settings</string>
-    <string name="rb_show_image">Show image</string>
-    <string name="rb_no_image">Don\'t show image</string>
-    <string name="btn_back_to_rp">Back to Recently Played Songs</string>
-    <string name="tv_welcome">Welcome</string>
-    <string name="tv_username">%1$s</string>
+    <string name="message">Check out %1$s by %2$s</string>
+
 </resources>
