--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- App Name -->
     <string name="app_name">Discoverfy</string>
 
-    <!-- SharedPreferences for image visibility -->
+    <!-- SharedPreferences -->
     <string name="shared_pref_file" translatable="false">com.application.discoverfy</string>
     <string name="prefer_image_choice" translatable ="false">prefer_image_choice</string>
     <string name="shared_pref_image_default" translatable="false">shared_pref_image_default</string>
