login and databases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <!-- API Response Error Messages -->
     <string name= "user_error">Failed to log in</string>
+    <string name="token_error">Failed to receive access token</string>
     <string name="error_message">Failed to download songs</string>
 
 
